--- a/web/components/SocialMedias/SocialMedias.module.scss
+++ b/web/components/SocialMedias/SocialMedias.module.scss
@@ -10,7 +10,9 @@
   }
   & > * {
     &:hover {
-      opacity: 0.7;
+      opacity: 1;
+      transform: scale(1.5);
+      transition: transform 0.1s ease-in-out;
     }
   }
   @media only screen and (min-width: $screen-large) {
